# elevenlabs-worldwide-hackathon

./: README.md
.github/workflows/: build.yml
api/: .env-template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/app/: main.py  products.py  prompts.py  schemas.py  tools.py
api/app/utils/: products.py  prompts.py  tools.py  tts.py
api/data/: products.json
api/graph/: graph.py
frontend/: index.html  package.json  tsconfig.app.json
frontend/src/: index.css  main.tsx
frontend/src/components/: Badges.tsx  ExpandableCard.tsx  Home.tsx  Layout.tsx  SpeechBar.tsx  SpeechIcon.tsx  Wishlist.tsx
frontend/src/hooks/: useRecording.ts
frontend/src/lib/: const.ts  models.ts  products.ts  state.ts  tts.ts
frontend/src/routes/: Products.tsx  Start.tsx  Summary.tsx
