[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.24",
    "dotenv>=0.9.9",
    "elevenlabs>=1.51.0",
    "fastapi[standard]>=0.115.8",
    "langchain-openai>=0.3.6",
    "openai>=1.63.2",
]
